# atrandance

./: .gitignore
client/: .env  README.md  metadata.json  package-lock.json  package.json
client/src/: App.tsx  apiService.ts  types.ts
client/src/pages/: AttendanceCheck.tsx  Dashboard.tsx  DepartmentManage.tsx  Statistics.tsx
server/: api_router.py  database.py  dto.py  main.py  models.py  pyproject.toml  repository.py  service.py
server/app/: api_router.py  dto.py  repository.py  service.py
server/resource/: 출석부_[토요교제] '26년 대전교회 청년회_임원 및 부서명단.xlsx
